--- a/Desktop/MainWindow.xaml
+++ b/Desktop/MainWindow.xaml
@@ -13,7 +13,7 @@
             <ColumnDefinition Width="260*" />
         </Grid.ColumnDefinitions>
 
-        <Image HorizontalAlignment="Left" Height="150" Margin="67,-320,0,0" VerticalAlignment="Center" Width="150" Source="/logo.png" Grid.ColumnSpan="2" />
+        <Image HorizontalAlignment="Left" Height="150" Margin="67,-320,0,0" VerticalAlignment="Center" Width="150" Source="\Images\logo.png" Grid.ColumnSpan="2" />
 
         <WrapPanel Margin="120,0,0,0" Orientation="Vertical" VerticalAlignment="Center" Grid.Column="2" Height="496" HorizontalAlignment="Left" Width="327">
 
@@ -47,5 +47,6 @@
                 </Button.Resources>
             </Button>
         </WrapPanel>
+        <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" Grid.ColumnSpan="3" />
     </Grid>
 </Window>
