--- a/Desktop/View/Page2.xaml
+++ b/Desktop/View/Page2.xaml
@@ -47,7 +47,7 @@
             <Label Style="{StaticResource LabelStyle}" Content="Задачи" Margin="22,162,0,0" VerticalAlignment="Top" MouseDown="ShowAllTasks_Click"/>
             <Label Style="{StaticResource LabelStyle}" Content="История" Margin="22,209,0,0" VerticalAlignment="Top" MouseDown="ShowCompletedTasks_Click"/>
             <StackPanel x:Name="CategoryStackPanel" Style="{StaticResource StackPanelStyle}" Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="134,64,0,0">
-                <!-- Категории добавляются динамически в коде -->
+                <!-- Категории -->
             </StackPanel>
             <ScrollViewer HorizontalAlignment="Left" Height="370" Margin="134,133,0,0" VerticalAlignment="Top" Width="320" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
                 <ScrollViewer.Resources>
@@ -67,8 +67,8 @@
                                         <StackPanel Orientation="Horizontal">
                                             <CheckBox x:Name="CheckBox" IsChecked="{Binding IsCompleted}" Margin="0,0,10,0" />
                                             <StackPanel Orientation="Vertical">
-                                                <TextBlock x:Name="NameTextBlock" Text="{Binding Name}" Width="150" />
-                                                <TextBlock x:Name="DateTextBlock" Text="{Binding Date, StringFormat='{}{0:hh:mm tt}'}" Width="150" Foreground="Gray" />
+                                                <TextBlock x:Name="NameTextBlock" Text="{Binding Name}" Width="196" TextTrimming="CharacterEllipsis" />
+                                                <TextBlock x:Name="DateTextBlock" Text="{Binding Date, StringFormat='{}{0:hh:mm tt}'}" Width="196" Foreground="Gray" Margin="0,2,0,0" TextTrimming="CharacterEllipsis" />
                                             </StackPanel>
                                         </StackPanel>
                                     </Border>
@@ -102,7 +102,7 @@
                             <StackPanel Orientation="Horizontal">
                                 <CheckBox IsChecked="{Binding IsCompleted}" Margin="0,0,10,0" />
                                 <StackPanel Orientation="Vertical">
-                                    <TextBlock Text="{Binding Name}" Width="150">
+                                    <TextBlock Text="{Binding Name}" Width="196" TextTrimming="CharacterEllipsis">
                                         <TextBlock.Style>
                                             <Style TargetType="TextBlock">
                                                 <Style.Triggers>
@@ -114,7 +114,7 @@
                                             </Style>
                                         </TextBlock.Style>
                                     </TextBlock>
-                                    <TextBlock Text="{Binding Date, StringFormat='{}{0:hh:mm tt}'}" Width="150" Foreground="Gray">
+                                    <TextBlock Text="{Binding Date, StringFormat='{}{0:hh:mm tt}'}" Width="196" Foreground="Gray" Margin="0,2,0,0" TextTrimming="CharacterEllipsis">
                                         <TextBlock.Style>
                                             <Style TargetType="TextBlock">
                                                 <Style.Triggers>
@@ -133,25 +133,27 @@
                 </ListBox>
             </ScrollViewer>
             <Border Style="{StaticResource BorderStyle}" BorderBrush="#000" BorderThickness="1" CornerRadius="1" Margin="469,133,0,0" Height="370" VerticalAlignment="Top" HorizontalAlignment="Left" Width="288" Visibility="{Binding SelectedTask, Converter={StaticResource NullToVisibilityConverter}}">
-                <StackPanel Margin="5,7,1,7">
-                    <TextBlock Text="{Binding SelectedTask.Name}" FontSize="24" FontWeight="Bold" Margin="0,0,0,10" />
-                    <TextBlock Text="{Binding SelectedTask.Date, StringFormat='{}{0:HH:mm, dd MMMM yyyy}'}" FontSize="16" />
-                    <TextBlock Text="{Binding SelectedTask.Description, FallbackValue='Описание отсутствует'}" FontSize="16" TextWrapping="Wrap" Margin="0,10,0,0" />
-                    <Button Style="{StaticResource ButtonStyle}" Content="Готово" Margin="5,150,5,5" Click="CompleteButtonClick" Height="36" Width="263" Visibility="{Binding IsShowingCompletedTasks, Converter={StaticResource BoolToVisibilityConverter}}">
-                        <Button.Resources>
-                            <Style TargetType="{x:Type Border}">
-                                <Setter Property="CornerRadius" Value="10,10,3,3"/>
-                            </Style>
-                        </Button.Resources>
-                    </Button>
-                    <Button Style="{StaticResource ButtonStyle}" Content="Удалить" Margin="5" Click="DeleteButtonClick" Height="36" Width="263" Visibility="{Binding IsShowingCompletedTasks, Converter={StaticResource BoolToVisibilityConverter}}">
-                        <Button.Resources>
-                            <Style TargetType="{x:Type Border}">
-                                <Setter Property="CornerRadius" Value="3,3,10,10"/>
-                            </Style>
-                        </Button.Resources>
-                    </Button>
-                </StackPanel>
+                <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled" MaxHeight="350">
+                    <StackPanel Margin="5,7,1,7">
+                        <TextBlock Text="{Binding SelectedTask.Name}" FontSize="24" FontWeight="Bold" Margin="0,0,0,10" TextWrapping="Wrap" />
+                        <TextBlock Text="{Binding SelectedTask.Date, StringFormat='{}{0:HH:mm, dd MMMM yyyy}'}" FontSize="16" />
+                        <TextBlock Text="{Binding SelectedTask.Description, FallbackValue='Описание отсутствует'}" FontSize="16" TextWrapping="Wrap" Margin="0,10,0,0" />
+                        <Button Style="{StaticResource ButtonStyle}" Content="Готово" Margin="5,150,5,5" Click="CompleteButtonClick" Height="36" Width="263" Visibility="{Binding IsShowingCompletedTasks, Converter={StaticResource BoolToVisibilityConverter}}">
+                            <Button.Resources>
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="CornerRadius" Value="10,10,3,3"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
+                        <Button Style="{StaticResource ButtonStyle}" Content="Удалить" Margin="5" Click="DeleteButtonClick" Height="36" Width="263" Visibility="{Binding IsShowingCompletedTasks, Converter={StaticResource BoolToVisibilityConverter}}">
+                            <Button.Resources>
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="CornerRadius" Value="3,3,10,10"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
+                    </StackPanel>
+                </ScrollViewer>
             </Border>
             <Button Style="{StaticResource ButtonStyle}" Content="+" Margin="0,480,718,0" BorderBrush="#F96860" Background="#F96860" FontSize="20" Foreground="White" Width="56" Height="56" VerticalAlignment="Top" HorizontalAlignment="Right" Click="AddTaskButton_Click">
                 <Button.Resources>
